# phpantom_lsp

./: Cargo.toml  README.md  config-schema.json  example.php
benches/: completion.rs
docs/: ARCHITECTURE.md  CHANGELOG.md  SETUP.md  todo-actions.md  todo-blade.md  todo-bugs.md  todo-completion.md  todo-diagnostics.md  todo-hover.md  todo-laravel.md  todo-lsp-features.md  todo-signatureHelp.md  todo-testing.md  todo-type-inference.md  todo.md
docs/todo/: actions.md  bugs.md  diagnostics.md  external-stubs.md  indexing.md  laravel.md  lsp-features.md  mago.md  performance.md  phpactor-test-parity.md  phpstan-actions.md  (+4 more)
src/: analyse.rs  code_lens.rs  composer.rs  config.rs  document_symbols.rs  fix.rs  formatting.rs  inheritance.rs  inheritance_tests.rs  inlay_hints.rs  lib.rs  main.rs  names.rs  php_type.rs  resolution.rs  selection_range.rs  server.rs  signature_help.rs  signature_help_tests.rs  stubs.rs  subject_expr.rs  subject_extraction.rs  subject_extraction_tests.rs  test_fixtures.rs  types.rs  util.rs
tests/: code_lens.rs  completion_class_name_context.rs  completion_closure_param_inference.rs  completion_comments.rs  completion_generators.rs  completion_laravel.rs  completion_namespaced_functions.rs  completion_phpdoc.rs  completion_properties.rs  completion_stub_functions.rs  completion_variable_names.rs  completion_variables.rs  crash_sandbox.rs  definition_laravel.rs  definition_unions.rs  definition_variables.rs  diagnostics_deprecated.rs  docblock_parsing.rs  folding_ranges.rs  hover.rs  inlay_hints.rs  named_args_internals.rs  signature_help.rs
(+128 files in other folders)
